--- a/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/Themes/BasicFlyerStyle.xaml
+++ b/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/Themes/BasicFlyerStyle.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:FoodGiantFlyerGenerator">
-    <Style TargetType="Label" x:Key="LblStyle">
+    <Style TargetType="Label" x:Key="FlyerLabelStyle">
         <Setter Property="FontSize" Value="14"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
