--- a/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/View/FlyerCreatorView.xaml
+++ b/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/View/FlyerCreatorView.xaml
@@ -25,9 +25,10 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="4*"/>
                 <RowDefinition Height="2*"/>
-                <RowDefinition Height="20*"/>
+                <RowDefinition Height="10*"/>
             </Grid.RowDefinitions>
 
+            <!--Layout and Optional settings-->
             <Border Grid.Row="0" Grid.Column="0" Grid.RowSpan="2" Grid.ColumnSpan="2" BorderBrush="Blue" Style="{StaticResource BdrStyle}">
                 <Grid>
                     <Grid.ColumnDefinitions>
@@ -55,6 +56,7 @@
                 </Grid>
             </Border>
 
+            <!--Flyer Options-->
             <Border Grid.Row="0" Grid.Column="2" Grid.RowSpan="2" Grid.ColumnSpan="2" BorderBrush="Red" Style="{StaticResource BdrStyle}">
                 <Grid Grid.Row="0" Grid.Column="2">
                     <Grid.ColumnDefinitions>
@@ -81,6 +83,8 @@
                 </Grid>
             </Border>
             
+            
+            <!--Flyer Items-->
             <Grid Grid.Row="3" Grid.ColumnSpan="4">
                 <Grid.RowDefinitions>
                     <!--Flyer Item Rows-->
