--- a/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/View/FlyerItemView.xaml
+++ b/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/View/FlyerItemView.xaml
@@ -29,6 +29,7 @@
             </ComboBox.ItemTemplate>
         </ComboBox>
         <TextBox Grid.Column="1" Grid.Row="0" Text="{Binding PriceTxtBlk}" Style="{StaticResource TxtBoxStyle}" />
+        <!--Make into text box, prompt user to enter item size-->
         <ComboBox Grid.Column="2"  ItemsSource="{Binding ItemSizeList}" Style="{StaticResource CmboBoxStyle}"
                               cal:Message.Attach="ItemSizeCmboBox_SelectionChanged($source)" />
 
