--- a/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/View/GenericFlyerView.xaml
+++ b/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/View/GenericFlyerView.xaml
@@ -1,19 +1,83 @@
-﻿<UserControl x:Class="FoodGiantFlyerGenerator.GenericFlyerView"
+﻿<Window x:Class="FoodGiantFlyerGenerator.GenericFlyerView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FoodGiantFlyerGenerator"
-        xmlns:cal="http://www.caliburnproject.org">
+        xmlns:cal="http://www.caliburnproject.org"
+        Width="800" Height="800">
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="../Themes/BasicFlyerStyle.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
-            
+            <ColumnDefinition Width="1*" SharedSizeGroup="ColumnGroups"/>
+            <ColumnDefinition Width="1*" SharedSizeGroup="ColumnGroups"/>
+            <ColumnDefinition Width="1*" SharedSizeGroup="ColumnGroups"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            
+            <RowDefinition Height="5*"/>
+            <RowDefinition Height="5*"/>
+            <RowDefinition Height="15*" />
         </Grid.RowDefinitions>
 
+        <!-- Grid to contain the store name and sale dates-->
+        <Grid Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="3">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="2*"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Grid.Column="0" Text="{Binding SaleDates}"  Style="{StaticResource FlyerDateStyle}"/>
+            <Image Grid.Column="1" Source="{Binding StoreImage}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+        </Grid>
 
-        <Label Content="Raincheck" Visibility="{Binding ShowRaincheck}" />
+        <Label Content="Raincheck" Visibility="{Binding ShowRaincheck}" Style="{StaticResource FlyerLabelStyle}"/>
+
+        <!--Flyer Items-->
+        <Grid Grid.Row="2" Grid.ColumnSpan="4">
+            <Grid.RowDefinitions>
+                <!--Flyer Item Rows-->
+                <RowDefinition Height="2*" SharedSizeGroup="Items"/>
+                <RowDefinition Height="2*" SharedSizeGroup="Items"/>
+                <RowDefinition Height="2*" SharedSizeGroup="Items"/>
+                <RowDefinition Height="2*" SharedSizeGroup="Items"/>
+                <RowDefinition Height="2*" SharedSizeGroup="Items"/>
+                <RowDefinition Height="2*" SharedSizeGroup="Items"/>
+                <RowDefinition Height="2*" SharedSizeGroup="Items"/>
+                <RowDefinition Height="2*" SharedSizeGroup="Items"/>
+                <RowDefinition Height="2*" SharedSizeGroup="Items"/>
+                <RowDefinition Height="2*" SharedSizeGroup="Items"/>
+                <RowDefinition Height="2*" SharedSizeGroup="Items"/>
+                <RowDefinition Height="2*" SharedSizeGroup="Items"/>
+                <RowDefinition Height="2*" SharedSizeGroup="Items"/>
+                <RowDefinition Height="2*" SharedSizeGroup="Items"/>
+                <RowDefinition Height="2*" SharedSizeGroup="Items"/>
+                <RowDefinition Height="2*" SharedSizeGroup="Items"/>
+                <RowDefinition Height="2*" SharedSizeGroup="Items"/>
+            </Grid.RowDefinitions>
+
+            <!--Flyer Items-->
+            <ContentControl Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" x:Name="FlyerItem1" Visibility="{Binding Item1Vis}" />
+            <ContentControl Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="4" x:Name="FlyerItem2" Visibility="{Binding Item2Vis}" />
+            <ContentControl Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="4" x:Name="FlyerItem3" Visibility="{Binding Item3Vis}" />
+            <ContentControl Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="4" x:Name="FlyerItem4" Visibility="{Binding Item4Vis}" />
+            <ContentControl Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="4" x:Name="FlyerItem5" Visibility="{Binding Item5Vis}" />
+            <ContentControl Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="4" x:Name="FlyerItem6" Visibility="{Binding Item6Vis}" />
+            <ContentControl Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="4" x:Name="FlyerItem7" Visibility="{Binding Item7Vis}" />
+            <ContentControl Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="4" x:Name="FlyerItem8" Visibility="{Binding Item8Vis}" />
+            <ContentControl Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="4" x:Name="FlyerItem9" Visibility="{Binding Item9Vis}" />
+            <ContentControl Grid.Row="9" Grid.Column="0" Grid.ColumnSpan="4" x:Name="FlyerItem10" Visibility="{Binding Item10Vis}" />
+            <ContentControl Grid.Row="10" Grid.Column="0" Grid.ColumnSpan="4" x:Name="FlyerItem11" Visibility="{Binding Item11Vis}" />
+            <ContentControl Grid.Row="11" Grid.Column="0" Grid.ColumnSpan="4" x:Name="FlyerItem12" Visibility="{Binding Item12Vis}" />
+            <ContentControl Grid.Row="12" Grid.Column="0" Grid.ColumnSpan="4" x:Name="FlyerItem13" Visibility="{Binding Item13Vis}" />
+            <ContentControl Grid.Row="13" Grid.Column="0" Grid.ColumnSpan="4" x:Name="FlyerItem14" Visibility="{Binding Item14Vis}" />
+            <ContentControl Grid.Row="14" Grid.Column="0" Grid.ColumnSpan="4" x:Name="FlyerItem15" Visibility="{Binding Item15Vis}" />
+            <ContentControl Grid.Row="15" Grid.Column="0" Grid.ColumnSpan="4" x:Name="FlyerItem16" Visibility="{Binding Item16Vis}" />
+        </Grid>
+
     </Grid>
-</UserControl>
+</Window>
