--- a/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/Themes/BasicFlyerStyle.xaml
+++ b/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/Themes/BasicFlyerStyle.xaml
@@ -40,4 +40,33 @@
         <Setter Property="TextWrapping" Value="Wrap"/>
     </Style>
 
+    <Style TargetType="TextBlock" x:Key="FlyerSmallCalendarDateStyle">
+        <Setter Property="FontSize" Value="11"/>
+        <Setter Property="FontWeight" Value="Bold"/>
+        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="FontFamily" Value="Arial"/>
+    </Style>
+
+    <Style TargetType="TextBlock" x:Key="FlyerCalendarDateStyle">
+        <Setter Property="FontSize" Value="14"/>
+        <Setter Property="FontWeight" Value="Bold"/>
+        <Setter Property="TextWrapping" Value="Wrap"/>
+        <Setter Property="FontFamily" Value="Arial"/>
+        <Setter Property="TextAlignment" Value="Center"/>
+    </Style>
+
+    <Style TargetType="TextBlock" x:Key="FlyerStoreInfoStyle">
+        <Setter Property="FontSize" Value="20"/>
+        <Setter Property="TextAlignment" Value="Center"/>
+        <Setter Property="FontWeight" Value="Bold"/>
+        <Setter Property="Foreground" Value="Red"/>
+        <Setter Property="TextWrapping" Value="Wrap"/>
+        <Setter Property="FontFamily" Value="Arial"/>
+        <Setter Property="Background" Value="White"/>
+    </Style>
+
+    <Style TargetType="ContentControl" x:Key="FlyerItemStyle">
+        <Setter Property="Padding" Value="8"/>
+    </Style>
+
 </ResourceDictionary>
