--- a/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/View/ProgramSelectorView.xaml
+++ b/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/View/ProgramSelectorView.xaml
@@ -7,7 +7,7 @@
         xmlns:cal="http://www.caliburnproject.org"
         Title="Food Giant Program Selector" Height="400" Width="525">
     <Window.Resources>
-        <BitmapImage x:Key="FoodGiantBannerImageSrc" UriSource="../Program Images/foodgiant_logo.png" />
+        <BitmapImage x:Key="FoodGiantBannerImageSrc" UriSource="../Program Images/FGLogo.png" />
     </Window.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
