--- a/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/Themes/BasicFlyerStyle.xaml
+++ b/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/Themes/BasicFlyerStyle.xaml
@@ -66,7 +66,7 @@
     </Style>
 
     <Style TargetType="ContentControl" x:Key="FlyerItemStyle">
-        <Setter Property="Padding" Value="8"/>
+        <Setter Property="Margin" Value="4"/>
     </Style>
 
 </ResourceDictionary>
