--- a/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/View/FlyerDisplayControlView.xaml
+++ b/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/View/FlyerDisplayControlView.xaml
@@ -1,24 +1,23 @@
-﻿<Window x:Class="FoodGiantFlyerGenerator.FlyerDisplayControlModel"
+﻿<Window x:Class="FoodGiantFlyerGenerator.FlyerDisplayControlView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FoodGiantFlyerGenerator"
         xmlns:cal="http://www.caliburnproject.org"
-        mc:Ignorable="d"
-        Title="BaseView" Height="300" Width="300">
+        MinWidth="1000" MinHeight="875"
+        Width="1000" Height="875"
+        MaxWidth="1000" MaxHeight="875">
     <Window.Resources>
         
     </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="5*"/>
-            <RowDefinition Height="15*" />
+            <RowDefinition Height="25"/>
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-
-        <Button Grid.Row="0" Content="Print Flyer"  cal:Message.Attach="PrintFlyer()"/>
-
-        <ContentControl Content="{Binding SelectedFlyerType}" />
-
+        <Button Grid.Row="0" Content="Print Flyer" Click="Button_Click" />
+        <!--cal:Message.Attach="PrintFlyer()"/>-->
+        <ContentControl Grid.Row="1" x:Name="SelectedFlyerType" />
     </Grid>
 </Window>
